Fixed p overflow

--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ a.read-btn.button.card-footer-item.is-primary:focus {
   border: none;
   box-shadow:none;
 }
+
+.content p {
+  word-wrap: break-word;
+}
  
 .content blockquote {
   margin-left: 0.2rem;
@@ -119,7 +123,7 @@ footer {
 
 .gallery-main {
   margin: 0.5rem auto;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem; 
 }
 
 .gallery-container {
